--- a/HelloWorld/package.json
+++ b/HelloWorld/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~8.2.0",
     "@nativescript/theme": "~2.3.3",
     "nativescript-angular": "~8.21.0",
+    "nativescript-texttospeech": "^2.0.3",
     "reflect-metadata": "~0.1.12",
     "rxjs": "^6.4.0",
     "tns-core-modules": "~6.5.0",
@@ -29,7 +30,7 @@
   },
   "devDependencies": {
     "@angular/compiler-cli": "~8.2.0",
-    "@ngtools/webpack": "~8.2.0",
+    "@ngtools/webpack": "^9.1.7",
     "nativescript-dev-webpack": "~1.5.1",
     "typescript": "~3.5.3"
   },
