--- a/HelloWorld/package.json
+++ b/HelloWorld/package.json
@@ -30,7 +30,9 @@
   },
   "devDependencies": {
     "@angular/compiler-cli": "~8.2.0",
+    "@nativescript/schematics": "^1.0.0",
     "@ngtools/webpack": "^9.1.7",
+    "@schematics/angular": "^9.1.7",
     "nativescript-dev-webpack": "~1.5.1",
     "typescript": "~3.5.3"
   },
